crates/carapace/tests/snapshots/behavior_snapshots__click_then_tick.snap
---
source: crates/carapace/tests/behavior_snapshots.rs
expression: t
---
=== step 0 (initial) ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level dir=right rgba=1,2,3,255
state: on=Some(Bool(false)) level=Some(Scalar(0.0))
=== step 1 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level dir=right rgba=1,2,3,255
state: on=Some(Bool(true)) level=Some(Scalar(0.0))
=== step 2 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level dir=right rgba=1,2,3,255
state: on=Some(Bool(true)) level=Some(Scalar(0.25))
=== step 3 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level dir=right rgba=1,2,3,255
state: on=Some(Bool(false)) level=Some(Scalar(0.25))
