crates/carapace/tests/snapshots/behavior_snapshots__failed_swap_keeps_scene.snap
---
source: crates/carapace/tests/behavior_snapshots.rs
expression: t
---
=== step 0 (initial) ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level rgba=1,2,3,255
state: on=Some(Bool(false)) level=Some(Scalar(0.0))
=== step 1 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level rgba=1,2,3,255
state: on=Some(Bool(false)) level=Some(Scalar(0.0))
