crates/carapace/tests/snapshots/behavior_snapshots__swap_preserves_state.snap
---
source: crates/carapace/tests/behavior_snapshots.rs
expression: t
---
=== step 0 (initial) ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level rgba=1,2,3,255
state: on=Some(Bool(false)) level=Some(Scalar(0.0))
=== step 1 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level rgba=1,2,3,255
state: on=Some(Bool(true)) level=Some(Scalar(0.0))
=== step 2 ===
scene:
canvas 200x200
hotspot handler=0
value_fill key=level rgba=1,2,3,255
state: on=Some(Bool(true)) level=Some(Scalar(0.3))
=== step 3 ===
scene:
canvas 200x200
value_fill key=level rgba=9,9,9,255
state: on=Some(Bool(true)) level=Some(Scalar(0.3))
